tests/transpiler/x/fortran/string_compare.f90
! Generated by Mochi transpiler v0.10.31 on 2025-07-19 17:41:11 GMT+7
program main
  print *, trim(("a" < "b"))
  print *, trim(("a" <= "a"))
  print *, trim(("b" > "a"))
  print *, trim(("b" >= "b"))
end program main
